# entservices-appmanagers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TIMING_INFRASTRUCTURE_README.md  build_dependencies.sh  cov_build.sh  coverage-baseline.json  services.cmake  spec_coverage.md
.github/: CODEOWNERS  (+1 more)
Tests/L0Tests/: CMakeLists.txt
Tests/L0Tests/AppManager/: AppInfoManagerTests.cpp  AppInfoTests.cpp  AppInfo_AppInfoManager_Tests.cpp  AppManagerImplementation_CoreTests.cpp  AppManagerImplementation_ErrorBoundaryTests.cpp  AppManagerTelemetryReporting_Tests.cpp  AppManagerTelemetryTests.cpp  AppManagerTest.cpp  AppManager_ComponentTests.cpp  AppManager_ImplementationTests.cpp  AppManager_L0_Coverage_Report.md  AppManager_LifecycleTests.cpp  CMakeLists.txt  LifecycleInterfaceConnector_Tests.cpp  ServiceMock.h
Tests/L0Tests/AppManager/mocks/: MockUtilsTelemetryMetrics.cpp
Tests/L0Tests/AppStorageManager/: AppStorageManagerTest.cpp  AppStorageManager_ComponentTests.cpp  AppStorageManager_ImplementationTests.cpp  AppStorageManager_LifecycleTests.cpp  README.md  ServiceMock.h
Tests/L0Tests/AppStorageManager/fakes/: FakeFilesystem.cpp  FakeFilesystem.h  FakePersistentStore.cpp  FakePersistentStore.h
Tests/L0Tests/DownloadManager/: DownloadManagerTest.cpp  DownloadManager_HttpClientTests.cpp  DownloadManager_ImplementationTests.cpp  DownloadManager_LifecycleTests.cpp  DownloadManager_TelemetryTests.cpp  ServiceMock.h
Tests/L0Tests/LifecycleManager/: LifecycleManagerServiceMock.h  LifecycleManagerTest.cpp  LifecycleManager_ContextTests.cpp  LifecycleManager_ImplementationTests.cpp  LifecycleManager_ShellTests.cpp
Tests/L0Tests/PackageManager/: PackageManagerTest.cpp  PackageManager_ComponentTests.cpp  PackageManager_ImplementationTests.cpp  PackageManager_ShellTests.cpp  ServiceMock.h
Tests/L0Tests/PreinstalManager/: PreinstallManagerImpl_CoreTests.cpp  PreinstallManagerImpl_EventTests.cpp  PreinstallManagerImpl_InstallAndVersionTests.cpp  PreinstallManagerTest.cpp  PreinstallManager_PluginTests.cpp  ServiceMock.h
Tests/L0Tests/PreinstallManager/: PreinstallManagerImpl_Tests.cpp  PreinstallManagerTest.cpp  PreinstallManager_ComponentTests.cpp  PreinstallManager_ImplementationTests.cpp  PreinstallManager_L0_TestCases.md  PreinstallManager_LifecycleTests.cpp  ServiceMock.h
Tests/L0Tests/RDKWindowManager/: RDKWindowManagerTest.cpp  RDKWindowManager_ImplementationTests.cpp  RDKWindowManager_LifecycleTests.cpp  ServiceMock.h
Tests/L0Tests/RDKWindowManager/fakes/: FakeRdkWindowManager.cpp  FakeRdkWindowManager.h
Tests/L0Tests/RuntimeManager/: RuntimeManagerTest.cpp  RuntimeManager_ComponentTests.cpp  RuntimeManager_ImplementationTests.cpp  RuntimeManager_L0_Coverage_Report.md  RuntimeManager_LifecycleTests.cpp  ServiceMock.h
Tests/L0Tests/RuntimeManager/Gateway/: Gateway_ContainerUtilsTests.cpp  Gateway_NetFilterTests.cpp  Gateway_WebInspectorTests.cpp
Tests/L0Tests/RuntimeManager/ralf/: Ralf_OCIConfigGeneratorTests.cpp  Ralf_PackageBuilderTests.cpp  Ralf_SupportTests.cpp
Tests/L0Tests/common/: AppManagerL0Fakes.hpp  AppManagerL0Mock.hpp  L0Bootstrap.cpp  L0Bootstrap.hpp  L0Expect.hpp  L0MockPersistentStore.cpp  L0MockPersistentStore.h  L0ServiceMock.hpp  L0ShellMock.hpp  L0TestConfig.h  L0TestTypes.hpp  README.md
Tests/L0Tests/docs/: AppManager_L0_TestPlan_and_Coverage.md  AppStorageManager_L0_Implementation_Plan.md  DownloadManager_L0_Coverage_Analysis.md  LifecycleManager_L0_Coverage_Analysis.md  PackageManager_L0_Test_Plan.md  PreinstallManager_L0_TestCases.md  PreinstallManager_L0_TestPlan_and_Coverage.md  RDKWindowManager_L0_Implementation_Plan.md  RuntimeManager_L0_Coverage_Analysis.md
Tests/L1Tests/: .lcovrc_l1  CMakeLists.txt  L1TestsIN.conf.in  WindowManagerMock.h  runner.cpp  test_RalfPackageBuilder_L2.cpp  test_RalfSupport.cpp
Tests/L1Tests/docs/: AppManager_L1_Coverage_Analysis.md  PreinstallManager_L1_Coverage_Analysis.md  PreinstallManager_L1_Segfault_RootCause_and_Fix.md  RDKWindowManager_L1_Coverage.md  RDKWindowManager_L1_Test_Structure.md  RDKWindowManager_L1_Uncovered_Analysis.md  RuntimeManager_L1_Coverage_Analysis.md
Tests/L1Tests/tests/: RalfSupportStub.cpp  test_AppManager.cpp  test_AppStorageManager.cpp  test_DownloadManager.cpp  test_Gateway.cpp  test_LifecycleManager.cpp  test_PackageManager.cpp  test_PreinstallManager.cpp  test_RDKWindowManager.cpp  test_Ralf.cpp  test_RunTimeManager.cpp  test_StorageManager.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/interfaces/: IL2Test.h
Tests/L2Tests/tests/: AppManager_L2Test.cpp  AppStorageManager_L2Test.cpp  L2Tests.cpp  L2TestsMock.cpp  L2TestsMock.h  L2testController.cpp  L2testController.h  Module.cpp  Module.h
Tests/mocks/: CMakeLists.txt  IPackageImplDummy.h  IPackageImplMock.h  LibPackageMock.h  MfrMock.cpp  MockAccessor.h  OCIContainerMock.h  PackageManagerMock.h  PowerManagerMock.h  RdkWindowManager.h  RdkWindowManagerMock.h  RemoteConnectionMock.h  StorageManagerMock.h  TelemetryMock.h  USBDeviceMock.h  UserSettingMock.h  WindowManagerMock.h  Wraps.cpp  Wraps.h  WrapsMock.h  devicesettings.h
Tests/mocks/L2Tests/: CMakeLists.txt
Tests/mocks/MockProxy/: CMakeLists.txt  IarmProxy.cpp  MfrProxy.cpp  PowerManagerHalProxy.cpp  RbusProxy.cpp  RfcProxy.cpp  WrapsProxy.cpp  procProxy.cpp
Tests/mocks/interfaces/: IMfr.h
Tests/testframework/L1Tests/: CMakeLists.txt
Tests/testframework/mocks/: CMakeLists.txt  LifecycleManagerMock.h  MfrMock.h  StorageManagerMock.h  Telemetry.cpp  Wraps.cpp  WrapsMock.h  devicesettings.h
helpers/: CMakeLists.txt  PerfMetrics.h  RDKAppManagersDebugTime.h  TIMING_INFRASTRUCTURE.md  TIMING_QUICK_REFERENCE.txt  TelemetryReportingBase.cpp  TelemetryReportingBase.h  UtilsLogging.h  UtilsString.h  UtilsTelemetry.h  UtilsTelemetryMetrics.cpp  UtilsTelemetryMetrics.h  WebSocketLink.h  check_instrumentation.py  rdkappmanagers_time_analyzer.py  sample_wpeframework.txt
helpers/Telemetry/: TelemetryMarkers.h  TelemetryReportingBase.cpp  TelemetryReportingBase.h  UtilsAppManagerTelemetry.h  UtilsTelemetryMetrics.cpp  UtilsTelemetryMetrics.h
(+29282 files in other folders)
